--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,14 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+  - repo: https://github.com/syntaqx/git-hooks
+    rev: v0.0.17
+    hooks:
+      - id: go-fmt
+      - id: go-mod-tidy
+      - id: forbid-binary
+      - id: shellcheck
+      - id: shfmt
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.3.0
     hooks:
