ci: add github actions dependabot config
Signed-off-by: Bruce Becker <brucellino@protonmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,9 @@ updates:
       interval: "weekly"
     reviewers:
       - "brucellino"
+  - package-ecosystem: github-actions
+    directory: ".github/workflows"
+    schedule:
+     interval: "weekly"
+    reviewers:
+      - "brucellino"
