--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,17 @@ jobs:
         uses: 'actions/checkout@v3'
         with:
           fetch-depth: 0
-      - name: Get Consul
+      - name: Validate
         run: |
           curl -fSL https://releases.hashicorp.com/consul/1.12.3/consul_1.12.3_linux_amd64.zip \
           | gunzip -> consul ; chmod u+x consul
       - name: Start Consul dev server
         run: ./consul agent -server -dev &
+      - run: |
+          curl -fSL https://releases.hashicorp.com/vault/1.13.2/vault_1.13.2_linux_amd64.zip \
+          | gunzip -> vault ; chmod u+x vault
+      - name: Start Vault dev server
+        run: ./vault server -dev &
       - name: Get Terraform
         run: |
           curl -fSL https://releases.hashicorp.com/terraform/1.2.3/terraform_1.2.3_linux_amd64.zip \
