--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,9 @@ jobs:
           '. | map(select(.is_prerelease == false)) | .[0].builds[] | select (.arch == "amd64" and .os=="linux").url')
           echo ${release_url}
           curl -fSL ${release_url} -o consul.zip
-          unzip consul.zip -p consul
+          ls -lht
+          file consul.zip
+          unzip -j consul.zip consul -d .
           chmod u+x consul
       - name: Start Consul dev server
         run: ./consul agent -server -dev &
