ci: add an empty value to the key for backend
Signed-off-by: Bruce Becker <brucellino@protonmail.ch>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,8 @@ jobs:
           experimental: true
       - name: Start Consul dev server
         run: consul agent -server -dev &
+      - name: Create kv store for backend
+        run: consul kv put terraform/modules/tfmod-digitalocean-minecraft-server '{}'
       - name: Start Vault dev server
         run: vault server -dev &
       - name: Test
